# test_publish_cool_workspace

./: Cargo.toml  check-git-clean.sh  justfile  test.sh  test.txt
.github/workflows/: cd.yml
test_publish_cool_workspace_inner/: Cargo.toml
test_publish_cool_workspsace_inner/: Cargo.toml
